--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-hello  world
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+<meta charset="UTF-8">  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+<title>论文展示</title>  
+<style>  
+    /* 这里添加你的CSS样式 */  
+    body {  
+        font-family: Arial, sans-serif;  
+        margin: 0;  
+        padding: 20px;  
+    }  
+    h1 {  
+        color: #333;  
+    }  
+    p {  
+        line-height: 1.6;  
+    }  
+    /* 其他样式 */  
+</style>  
+</head>  
+<body>  
+  
+<h1>论文标题</h1>  
+<p>作者：作者姓名</p>  
+<p>所属机构：机构名称</p>  
+  
+<h2>摘要</h2>  
+<p>这里是论文的摘要内容。</p>  
+  
+<h2>正文</h2>  
+<p>这里是论文的正文内容。</p>  
+<p>你可以根据需要添加更多的段落和章节。</p>  
+  
+<h2>结论</h2>  
+<p>这里是论文的结论部分。</p>  
+  
+<h2>参考文献</h2>  
+<ul>  
+    <li>参考文献1</li>  
+    <li>参考文献2</li>  
+    <!-- 添加其他参考文献 -->  
+</ul>  
+  
+<!-- 如果需要添加JavaScript，可以在这里添加 -->  
+<script>  
+    // 这里添加你的JavaScript代码  
+</script>  
+  
+</body>  
+</html>
